--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<mat-card>
+  <mat-card-title>Développeuses et développeurs : à table !</mat-card-title>
+  <mat-card-subtitle>Qui mange bien code mieux</mat-card-subtitle>
+  <img mat-card-image [src]="cafe" alt="Photo café">
+  <mat-card-content>
+    <p>Un grand restaurant ne se résume pas uniquement aux clients et aux belles voitures. Derrière il y a de la rigueur, de la passion, de l'amour du travail bien fait, de la discipline et de la transmission du savoir.</p>
+  </mat-card-content>
+</mat-card>
