Ajout composant réserve

--- a/src/app/reserve/reserve.component.html
+++ b/src/app/reserve/reserve.component.html
@@ -1,3 +1,37 @@
-<p>
-  reserve works!
-</p>
+<form [formGroup]="reservationForm">
+  <mat-form-field>
+    <input matInput [matDatepicker]="picker" placeholder="Choisir une date" formControlName="date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker startView="year" [startAt]="date"></mat-datepicker>
+  </mat-form-field>
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+<form [formGroup]="reservationForm">
+  <input type="date" formControlName="date">
+  <select formControlName="time">
+    <option *ngFor="let to of timeOptions">{{ to }}</option>
+  </select>
+  <select formControlName="people">
+    <option *ngFor="let po of peopleOptions">{{ po }}</option>
+  </select>
+</form>
+
+{{ reservationForm.value | json }}
+
+-->
