composant reservation up

--- a/src/app/reserve/reserve.component.html
+++ b/src/app/reserve/reserve.component.html
@@ -1,37 +1,41 @@
-<form [formGroup]="reservationForm">
+<form [formGroup]="reservationForm" (submit)="saveReservation()" class="example-container">
   <mat-form-field>
-    <input matInput [matDatepicker]="picker" placeholder="Choisir une date" formControlName="date">
+    <input matInput [matDatepicker]="picker" placeholder="choisir une date" formControlName="date" required>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker startView="year" [startAt]="date"></mat-datepicker>
   </mat-form-field>
-</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-<form [formGroup]="reservationForm">
-  <input type="date" formControlName="date">
-  <select formControlName="time">
-    <option *ngFor="let to of timeOptions">{{ to }}</option>
-  </select>
-  <select formControlName="people">
-    <option *ngFor="let po of peopleOptions">{{ po }}</option>
-  </select>
+  <mat-form-field>
+    <mat-select placeholder="heure" formControlName="time" required>
+      <mat-option *ngFor="let to of timeOptions" [value]="to">
+        {{ to }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-select placeholder="combien de personnes" formControlName="people">
+      <mat-option *ngFor="let po of peopleOptions" [value]="po">
+        {{ po }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 </form>
 
 {{ reservationForm.value | json }}
 
--->
+<form #f="ngForm" (submit)="finalizeRerservation(f.value)">
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="client.firstName" name="firstName" placeholder="prénom" required />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="client.lastName" name="lastName" placeholder="lastName" required />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="client.email" name="email" placeholder="email" required />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="client.phone" name="phone" placeholder="phone" required />
+  </mat-form-field>
+  <button mat-button type="submit">réserver</button>
+</form>
+
+{{ f.controls.firstName?.value }}
